Fix overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -95,6 +95,7 @@ pre code {
 }
 
 pre {
+  overflow: auto;
   margin: 24px 0;
 }
 
